# ChangeLog for dev-java/saaj
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/saaj/ChangeLog,v 1.11 2008/10/05 20:20:57 serkan Exp $

*saaj-1.3-r1 (05 Oct 2008)

  05 Oct 2008; Serkan Kaba <serkan@gentoo.org> +saaj-1.3-r1.ebuild:
  Migrate to jaf and saaj-api virtuals.

  28 Mar 2008; nixnut <nixnut@gentoo.org> saaj-1.3.ebuild:
  Stable on ppc wrt bug 214778

  09 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> saaj-1.3.ebuild:
  Restrict to either 1.6 or 1.5 as 1.7 release don't have needed com.sun.*
  classes. Filed bug #212854 for com.sun usage.

  15 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> saaj-1.3.ebuild:
  Add app-arch/unzip to DEPEND.

  15 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> saaj-1.3.ebuild:
  Fix dev-java/xerces dependency so that it doesn't match multiple slots.

  19 Aug 2007; William L. Thomson Jr. <wltjr@gentoo.org> saaj-1.3.ebuild:
  amd64 stable, bug #187681.

  15 Aug 2007; Christian Faulhammer <opfer@gentoo.org> saaj-1.3.ebuild:
  stable x86, bug 187681

  11 Aug 2007; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml:
  Remove myself from <maintainer>.

  23 May 2007; Diego Pettenò <flameeyes@gentoo.org> saaj-1.3.ebuild:
  Add ~x86-fbsd keyword. Bug #176906.

  05 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> saaj-1.3.ebuild:
  Move -i to be first option.

*saaj-1.3 (01 May 2007)

  01 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> +files/build.xml-1.3,
  +metadata.xml, +saaj-1.3.ebuild:
  Initial commit of saaj.
