@@ -2,15 +2,21 @@
 Hash: SHA1
 
 AUX build.xml-1.3 442 RMD160 ca6ad741c1cf33f529f135bae63647317745f568 SHA1 813c2abd9a11af89fd519c410f5f2919aa0cc4b2 SHA256 4c92b6eaf6cb2a8bf1cf4f579536569ab37c198032369bc0eb869e4d36da3b74
+DIST saaj-1.3.19.tar.bz2 2266558 RMD160 59f7d1176860b394ac2815da32d290a6cb132ff8 SHA1 ab46b33fa9b97987b1312ea8a232f71016591cd0 SHA256 d498d621a9798e503dae9728cf39d50a585e7704ffab2feb61ed769534f05f43
 DIST saaj1.3.src.zip 262141 RMD160 87e3d28373e84b8fbd03f0467ad8a0b6e091139d SHA1 526b00954a373161eb39a6618446c56000c21b3d SHA256 51a746c08aac81c4fe39af6fcb3fd5f713159306f87f7ec84109b9d877e4fa6b
 EBUILD saaj-1.3-r1.ebuild 1468 RMD160 c6218134b737ebe308dfaeba6662e05b1a888295 SHA1 c91b1e068cc74ba1bea52632531dce32ccafbd05 SHA256 9d7ed84934549eb825c2ae825c497290205f5c6a77d34b428d4f1519dc40ff2e
+EBUILD saaj-1.3.19.ebuild 1629 RMD160 f09d9903e0964afe3b919f5d3b20edfff4f79388 SHA1 d45f95263e976f38c504ca30a932c2668218cdcc SHA256 a282808e3a573db370a6b04c07e46efbc5c4d6fdc72a0ddf3e2a5ed2cfbd6dae
 EBUILD saaj-1.3.ebuild 1434 RMD160 e600098b4176096337f028001dccf6ccbd49348c SHA1 7b0fb6b3fbdb29c87707ef008a52389665020007 SHA256 458d8e060c19f3a776d33342e89ac26552b9bf842b29211ae324e4b0f462306b
-MISC ChangeLog 1547 RMD160 1d6ce73f6d53a23ea2f9bd074772729b2e159555 SHA1 7078a6449a0d9612c3b8de9cdabb6ba65450ceaf SHA256 c9ad169f31c504d134d6c7d1af6a73e70e8d100a28ccdec331fa3d44e6f8d381
+MISC ChangeLog 1817 RMD160 b8a6d148494fcff01f701381587a7ed7a4286c24 SHA1 7428d4558bb953e5ba1b115d9930c325093931b0 SHA256 651fc74e538c03b7b4c5ccfac98a47033068d96dd956b2b04b0345202934b65e
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAkjpIbEACgkQRh6X64ivZaKjSgCdGAwcYLBLEP4lpGKnoe9qe7bd
-glMAnRmTGj0u1vFfWKvALShEeSWeg0R5
-=39er
+iQEcBAEBAgAGBQJPyRdeAAoJEIUJ+svaV163Ne0IAJh+nLLA3T7fWcrIKil7kLzJ
+W/JjpHtJ+q2wRKoaF54ZAU8/3K+72IXtR9vLQfxlsT2Ytv7V7HVMR5zcSHc/TNT/
+TTKDyOp4HJlQ7ehvg5c9v5lHB/iTbEpzBHm4qaQ28Q8CyQC2ZfHGXI4bxCH5ImVw
+1KwXKDgrhKxVLmSEnLHe+MoBPWbEDCA4girzi1YZcgEhKHr8lqFg4BxTOiN9FORx
+DlfmypB25sZ+q7Ng5/aEhv+EOjVyzpt0vMVXBtwcXiAif8b0c6DojH9n8x/bCL07
+VZ6rAdwNo4WWlGqCm/Na5JdrA4ET5TaWGGpdA/YiYoL3xW6QM9i6qn3fd5IVLH8=
+=lIqP
 -----END PGP SIGNATURE-----
