@@ -1,6 +1,15 @@
 # ChangeLog for dev-java/saaj
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/saaj/ChangeLog,v 1.11 2008/10/05 20:20:57 serkan Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/saaj/ChangeLog,v 1.12 2012/06/01 19:25:58 sera Exp $
+
+*saaj-1.3.19 (01 Jun 2012)
+
+  01 Jun 2012; Ralph Sennhauser <sera@gentoo.org> +saaj-1.3.19.ebuild:
+  Version bump.
+  Fixes building with jdk7.
+  Add unit tests and examples.
+  No longer using internal com.sun classes. #212854
+  Fixes building with xerces-2.9.11. #417997
 
 *saaj-1.3-r1 (05 Oct 2008)
 
